# cargo-slim

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: main.rs
tests/: inspect_cli.rs
tests/fixtures/: not-object.txt
tests/fixtures/cargo-project/: Cargo.toml
tests/fixtures/suggestions/: Cargo.toml
tests/fixtures/workspace/: Cargo.toml
tests/fixtures/workspace/member/: Cargo.toml
